--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "bower": "^1.8.4",
     "pulp": "^12.3.0",
-    "purescript": "^0.12.0"
+    "purescript": "^0.12.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   }
 }
