--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "purescript-parallel": "^4.0.0",
     "purescript-js-timers": "^4.0.1",
     "purescript-generics-rep": "^6.1.0",
-    "purescript-react-basic": "^6.0.0"
+    "purescript-react-basic": "^6.2.0",
+    "purescript-transformers": "^4.1.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^4.0.0"
